--- a/README
+++ b/README
@@ -4,6 +4,7 @@ Checking:
 $ php -m | grep ssh
 
 Installing:
+$ sudo apt-get install php5-dev php5-cli php-pear build-essential openssl-dev zlib1g-dev libssh2-1-dev 
 $ sudo pecl install -f ssh2
 $ echo 'extension=ssh2.so' > /etc/php5/conf.d/ssh2.ini
 
@@ -32,5 +33,5 @@ Using:
 |  | $ssh->reconnect();
 |
 |- Disconnect is automatic;
- *
+
 Thx 4 using;
